--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,8 @@
 <%= form_for :user, url: '/users' do |f| %>
-    <label :username><%= f.text_field :username %>
-    
+    Name:<%= f.text_field :name %><br>
+    Specialty: <%= f.text_field :specialty%><br>
+    Email: <%= f.text_field :email%><br>
+    Password: <%= f.password_field :password %><br>
+    Password Confirmation: <%= f.password_field :password_confirmation %><br>
+    <%= f.submit "Create User"%>
 <% end %>
