--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,3 @@
-<%= form_for :user, url: '/users' do |f| %>
-    Name:<%= f.text_field :name %><br>
-    Specialty: <%= f.text_field :specialty%><br>
-    Email: <%= f.text_field :email%><br>
-    Password: <%= f.password_field :password %><br>
-    Password Confirmation: <%= f.password_field :password_confirmation %><br>
-    <%= f.submit "Create User"%>
-<% end %>
+<%= render "form" %>
+
+
