setting up devise and omniauth with devise

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
    <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "email" %>
+    <%= f.text_field :name, autofocus: true%>
   </div>  
 
    <div class="field">
     <%= f.label :specialty %><br />
-    <%= f.text_field :specialty, autofocus: true, autocomplete: "email" %>
+    <%= f.text_field :specialty, autofocus: true %>
   </div>
 
   <div class="field">
