--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @patient do |f| %>
+<%= form_for [@user, patient] do |f| %>
     <%= f.label "Patient Name:"%>
     <%= f.text_field :name %><br>
     <%= f.label "Patient Symptoms:"%>
