bug fixing for patient#show path

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,5 +1,6 @@
-Patients show page 
 
-<%= @patient.name %>
-<%= @patient.symptoms %>
-<%= @patient.user.name %>
+
+<h3><%= @patient.name %></h3>
+<p>
+    <%= @patient.symptoms %>
+</p>
