--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@user, patient] do |f| %>
+<%= form_for :patient, as: :post, url: user_patients_path(current_user) do |f| %>
     <%= f.label "Patient Name:"%>
     <%= f.text_field :name %><br>
     <%= f.label "Patient Symptoms:"%>
