fixed formatting on index page

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,5 +1,3 @@
-<%# 
-<%= link_to "Add Patient", new_user_patient_path(@user) %><br> %>
 
 <table>
     <col width="120">
@@ -7,12 +5,16 @@
     <tr>
         <th align="left">Patient Name</th>
         <th align="left"> Patient Symptoms</th>
+        <th align="left"> Doctor(s)</th>
     </tr>
     <% @patients.each do |patient| %>
         <tr>
-            byebug
-            <td><%= link_to patient.name, patient_path(patient.users.id, patient)%></td>
-            <td><%= patient.symptoms %></td><br>
+            <td><%= link_to patient.name, user_patient_path(current_user, patient)%></td>
+            <td><%= patient.symptoms %></td>
+            <td><%= patient.doctor_names %></td>
         </tr>
     <% end %>
 </table>
+<br>
+
+<%= button_to "Add Patient", new_user_patient_path(current_user), method: :get %><br>
