--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -3,6 +3,8 @@
     <%= f.text_field :name %><br>
     <%= f.label "Patient Symptoms:"%>
     <%= f.text_area :symptoms%><br>
+    <%= f.label "Appointment"%>
+    <%= f.datetime_select :time%>
     <br>
     <%= f.submit "Submit"%>
 <% end %>
