created new appointment form, added search on index page, updated patients show to include appointment time

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -2,6 +2,8 @@
 
 <%= button_to "Add Patient", new_user_patient_path(@user), method: :get %><br>
 
+<%= button_to "Create Appointment", new_user_appointment_path(@user), method: :get %>
+
 
 
 
