added create appointment button to index, added create appointment link to layout

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -8,3 +8,5 @@
     <% end %>
     <%= f.submit "Submit"%>
 <% end %>
+
+# Need to post to the patient when going to patient show path - currently just shows blank user and symptoms
