--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
     <%= link_to "Home", root_path%>
     <br>
+
+    <%= link_to "Create Appointment", new_user_appointment_path(current_user), method: :get %>
     <%= yield %>
 
   <br>
