creating next appointment page

--- a/app/views/patients/_links.html.erb
+++ b/app/views/patients/_links.html.erb
@@ -3,4 +3,6 @@
 
 <%= button_to "Create Appointment", new_user_appointment_path(current_user), method: :get %><br>
 
-<%= button_to "All Patients", patients_path, method: :get %>
+<%= button_to "All Patients", patients_path, method: :get %><br>
+
+<%= button_to "Next Appointment", next_appointment_path, method: :get %>
