next appointment bugs, doctor_name method bugs

--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -3,3 +3,4 @@ This is the user edit page
 <%= render 'form', patient: @patient %>
 
 #put delete button on edit form 
+# be able to add doctor on form
