--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -9,6 +9,6 @@
     Doctor: <%= @patient.doctor_names%>
 </p>
 
-<%= button_to "Edit Patient", edit_user_patient_path(current_user, @patient) %>
+<%= button_to "Edit Patient", edit_user_patient_path(current_user, @patient), method: :get %>
 
 <%= render 'links' %>
