--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -4,7 +4,7 @@
 <p>
     Symptoms: <%= @patient.symptoms %><br>
     <br>
-    Upcoming Appointment: <%= @patient.appointment_times%>
+    Upcoming Appointment: <%= @patient.appointment_times%><br>
     <br>
     Doctor: <%= @patient.doctor_names%>
 </p>
