--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,11 @@
 <h2>User Edit Page</h2>
 
+<% if !!flash[:errors] %>
+    <% flash[:errors].each do |e| %>
+        <p style="color:red"><%= e %> </p><br>
+    <% end %>
+<% end %>
+
 <%= form_for @user do |f| %>
     <%= f.label "Name" %>
     <%= f.text_field :name %><br>
