added partial for error handling code

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,10 +1,6 @@
 <h3>Create an Appointment</h3>
 
-<% if !!flash[:errors] %>
-    <% flash[:errors].each do |e| %>
-        <p style="color:red"><%= e %> </p><br>
-    <% end %>
-<% end %>
+<%= render 'patients/errors' %>
 
 <%= form_for @appointment, method: :post, url: user_appointments_path do |f| %>
     <%= f.label "Patient:"%>
