--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,11 +1,6 @@
 <h1>Add a Patient </h1>
 
-<% if !!flash[:errors] %>
-    <% flash[:errors].each do |e| %>
-        <p style="color:red"><%= e %> </p><br>
-    <% end %>
-<% end %>
-
+<%= render 'errors' %>
 
 
 <%= form_for :patient, as: :post, url: user_patients_path(current_user) do |f| %>
