--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,6 @@
 <h2>User Edit Page</h2>
 
-<% if !!flash[:errors] %>
-    <% flash[:errors].each do |e| %>
-        <p style="color:red"><%= e %> </p><br>
-    <% end %>
-<% end %>
+<%= render 'patients/errors' %>
 
 <%= form_for @user do |f| %>
     <%= f.label "Name" %>
