add div with class to buttons for styling

--- a/app/views/patients/_links.html.erb
+++ b/app/views/patients/_links.html.erb
@@ -1,3 +1,4 @@
+<div class="buttons">
 <br>
 <%= button_to "Add Patient", new_user_patient_path(current_user), method: :get %><br>
 
@@ -6,3 +7,5 @@
 <%= button_to "All Patients", patients_path, method: :get %><br>
 
 <%= button_to "Next Appointment", next_appointment_path, method: :get %>
+
+</div>
