--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,3 +32,10 @@
 	}
 }
 
+.button{
+    color: #bbbbbb;
+    width: 200px;
+    height: 100px;
+    /*add any other properties you want to style*/
+  }
+
