--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,10 +32,10 @@
 	}
 }
 
-.button{
+.buttons{
     color: #bbbbbb;
     width: 200px;
     height: 100px;
-    /*add any other properties you want to style*/
+    
   }
 
